syntax = "proto3";

option go_package = "/userpb";

service UserService {
  rpc NewUser(NewUserRequest) returns (NewUserResponse);
}

message NewUserRequest {
  string username = 1;
}

message NewUserResponse {
  bool success = 1;
  string message = 2;
}
